# arcana

./: .gitignore  Cargo.toml  KEYWORDS.md  README.md  STATUS_2026-04-21.md
arcana-ai/: Cargo.toml
arcana-ai/benches/: observation.rs
arcana-ai/src/: action_flattening.rs  information_set.rs  lib.rs  observation.rs  reward.rs  selfplay.rs
arcana-cards/: Cargo.toml  build.rs
arcana-cards/src/: keywords.rs  lib.rs  registry.rs  tokens.rs
arcana-cards/src/a25/: geist_of_the_moors.rs  mod.rs  watchwolf.rs
arcana-cards/src/aer/: alley_strangler.rs  foundry_assembler.rs  ghirapur_osprey.rs  lathnu_sailback.rs  mod.rs  prizefighter_construct.rs  servo_exhibition.rs  walking_ballista.rs
arcana-cards/src/afr/: hulking_bugbear.rs  mod.rs  rimeshield_frost_giant.rs  steadfast_paladin.rs  underdark_basilisk.rs
arcana-cards/src/akh/: ahn_crop_crasher.rs  ancient_crab.rs  colossapede.rs  cursed_minotaur.rs  dune_beetle.rs  hyena_pack.rs  mod.rs  nimble_blade_khenra.rs  those_who_serve.rs
arcana-cards/src/ala/: akrasan_squire.rs  cylian_elf.rs  dreg_reaver.rs  goblin_mountaineer.rs  incurable_ogre.rs  jhessian_lookout.rs  mod.rs  outrider_of_jhess.rs  ridge_rannet.rs  yoked_plowbeast.rs
arcana-cards/src/all/: kjeldoran_escort.rs  mod.rs
arcana-cards/src/apc/: fire_ice.rs  mod.rs
arcana-cards/src/arb/: gorger_wurm.rs  grizzled_leotau.rs  mod.rs  sewn_eye_drake.rs
arcana-cards/src/arn/: mod.rs  stone_throwing_devils.rs
arcana-cards/src/avr/: farbog_explorer.rs  haunted_guardian.rs  mod.rs  nettle_swine.rs  raging_poltergeist.rs
arcana-cards/src/bbd/: angel_of_retribution.rs  benthic_giant.rs  champion_of_arashin.rs  cowl_prowler.rs  earth_elemental.rs  gold_forged_sentinel.rs  hand_of_silumgar.rs  hexplate_golem.rs  kraken_hatchling.rs  millennial_gargoyle.rs  mod.rs  nimbus_of_the_isles.rs  prakhata_club_security.rs  primal_huntbeast.rs  raptor_companion.rs  rhox_brute.rs  yotian_soldier.rs
arcana-cards/src/bfz/: broodhunter_wurm.rs  cloud_manta.rs  eldrazi_devastator.rs  expedition_envoy.rs  fortified_rampart.rs  ghostly_sentinel.rs  giant_mantis.rs  kitesail_scout.rs  mod.rs  shadow_glider.rs  shatterskull_recruit.rs
arcana-cards/src/blb/: brightblade_stoat.rs  mod.rs  quaketusk_boar.rs  shrike_force.rs
arcana-cards/src/bng/: charging_badger.rs  cyclops_of_one_eyed_pass.rs  great_hart.rs  mod.rs  swordwise_centaur.rs
arcana-cards/src/bok/: forked_branch_garami.rs  frost_ogre.rs  gnarled_mass.rs  mod.rs
arcana-cards/src/bro/: mod.rs  roc_hunter.rs  tomakul_honor_guard.rs  yotian_medic.rs
arcana-cards/src/c13/: archangel.rs  mod.rs
arcana-cli/: Cargo.toml
arcana-cli/src/: bench.rs  debugger.rs  main.rs  replay.rs
arcana-core/: Cargo.toml
arcana-core/benches/: simulation.rs
arcana-core/examples/: profile_target.rs
arcana-core/src/: actions.rs  collections.rs  combat.rs  effects.rs  engine.rs  events.rs  format.rs  keywords.rs  layers.rs  legal_actions.rs  lib.rs  mana.rs  objects.rs  priority.rs  registry.rs  replacement.rs  sample_cards.rs  sba.rs  stack.rs  state.rs  targets.rs  triggers.rs  turn.rs  types.rs  zones.rs
arcana-core/tests/: basic_game.rs  combat_scenarios.rs  determinism.rs  layer_tests.rs  sba_tests.rs  seed_integration.rs  stack_interactions.rs  triggers.rs
arcana-gen/: Cargo.toml
arcana-gen/scripts/: README.macos.md  README.oscar.md  RUNBOOK.md  bakeoff_oscar.sh  bakeoff_oscar_smoke.sh  land_cards.py
arcana-gen/src/: analyze.rs  bakeoff.rs  classifier.rs  lib.rs  llm.rs  prompt.rs  scryfall.rs  semantic.rs  structural.rs  verify.rs
arcana-py/: Cargo.toml  README.md  pyproject.toml
arcana-py/examples/: reinforce_demo.py
arcana-py/python/arcana/: __init__.py  env.py  policies.py  training.py
arcana-py/src/: conversions.rs  env.rs  episode.rs  lib.rs
arcana-py/tests/: test_examples.py  test_run_episode.py  test_smoke.py  test_training.py
arcana-session/: Cargo.toml
arcana-session/src/: agent.rs  lib.rs  observer.rs  session.rs  stop.rs
arcana-session/tests/: session_integration.rs
(+1088 files in other folders)
