[workspace]
members = [
    "arcana-core",
    "arcana-cards",
    "arcana-ai",
    "arcana-py",
    "arcana-gen",
    "arcana-cli",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
im = "15"
rand = "0.8"
rand_chacha = "0.3"
smallvec = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
