[workspace]
members = [
    "arcana-core",
    "arcana-cards",
    "arcana-ai",
    "arcana-py",
    "arcana-gen",
    "arcana-cli",
    "arcana-session",
]
resolver = "2"

[profile.bench]
debug = true

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
im = "15"
rand = "0.8"
rand_chacha = "0.3"
rustc-hash = "2"
smallvec = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
